--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,7 @@
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
 %-------------------------------------------
-%%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%  RESUME STARTS HERE.  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
