Update something to trigger CI once more .

--- a/main.tex
+++ b/main.tex
@@ -269,14 +269,14 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{QRTick - Python QR Code Generator} \href{https://github.com/foundRamit/qrtick}{\underline{[GitHub]}} $|$ \emph{Python, MongoDB}}{March 2025}
+          {\textbf{QRTick - Python QR Code Generator} $|$ \emph{Python, MongoDB}}{March 2025}
           \resumeItemListStart
             \resumeItem{Developed a Python application to generate QR codes from user registration data.}
             \resumeItem{Implemented local storage of QR images and metadata management using MongoDB.}
             \resumeItem{Designed a modular codebase with separate utilities for database initialization and QR generation.}
            \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Fintech Club - Arcade Platform} \href{https://github.com/foundRamit/arcade-platform}{\underline{[GitHub]}} $|$ \emph{Node.js, Express.js, MongoDB}}{Feb 2025}
+          {\textbf{Fintech Club - Arcade Platform} $|$ \emph{Node.js, Express.js, MongoDB}}{Feb 2025}
           \resumeItemListStart
             \resumeItem{Developed backend services using Node.js and Express.js, with MongoDB integration for persistent data storage.}
             \resumeItem{Implemented user authentication, payment handling, and bulk email services for streamlined registration.}
