Update resume formatting for consistency and clarity

--- a/main.tex
+++ b/main.tex
@@ -134,7 +134,7 @@
         \textbf{Languages:} JavaScript, Python \\
         \textbf{Frameworks:} Node.js, Express.js, WPF \\
         \textbf{APIs:} Google Sheets API, Google Translate API, Nodemailer \\
-        \textbf{Tools/Platforms:} Git, GitHub, MongoDB, Postman, Netlify, Render \\
+        \textbf{Tools/Platforms:} Git, GitHub, MongoDB, Postman \\
         \textbf{CI/CD:} GitHub Actions
         
     }}
