--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+% This is a LaTeX template for a resume. It is designed to be simple and easy to customize.
 %-------------------------
 % Resume in Latex
 % Author : Jake Gutierrez
