Update LaTeX resume template comment for consistency in capitalization

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% This is a LaTeX template for a resume. It is designed to be simple and easy to customize.
+% This is a LaTeX template for a resume. It is designed to be simple and easy to Customize.
 %-------------------------
 % Resume in Latex
 % Author : Jake Gutierrez
