add About Me section  to resume

--- a/main.tex
+++ b/main.tex
@@ -82,38 +82,43 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Ramit Ramawtar Taparia} \\ \vspace{1pt}
-    \href{tel:+919082869978}{\underline{+91 9082869978}} $|$ \href{mailto:ramit.work2603@gmail.com}{\underline{ramit.work2603@gmail.com}} $|$ 
+    \href{tel:+919082869978}{\underline{+91 9082869978}} $|$ \href{mailto:ramit.t.work@gmail.com}{\underline{ramit.t.work@gmail.com}} $|$ 
     \href{https://www.linkedin.com/in/ramit-taparia/}{\underline{LinkedIn}} $|$
     \href{https://github.com/foundRamit}{\underline{GitHub}}
 \end{center}
 
+\vspace{-5pt}
+\section*{About Me}
+Hi! I'm Ramit Taparia — an aspiring backend developer with a strong foundation in Python and Node.js. Passionate about building scalable APIs and efficient server-side systems. Currently focusing on expanding my knowledge in distributed systems and cloud technologies.
+
 %-----------EDUCATION-----------
 \section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Vellore Institute of Technology (VIT Bhopal)}{Bhopal, IN}
-      {Integrated Master of Technology in Artificial Intelligence, Expected 2029}{September 2024 -- 2029}
-  \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {Vellore Institute of Technology (VIT Bhopal)}{Bhopal, IN}
+    {Integrated Master of Technology in Artificial Intelligence, Expected 2029}{September 2024 -- 2029}
+\resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
 \section{Experience}
-  \resumeSubHeadingListStart
-   \resumeSubheading
-      {Product Engineering Intern}{March 2024 -- Present}
-      {Viskk}{Remote}
-      \resumeItemListStart
-       \resumeItem{Built a WPF-based Windows app to reduce eye strain using the 20-20-20 rule.}
-        \resumeItem{Implemented smart break timers, system tray controls, and idle detection.}
-        \resumeItem{Set up CI/CD pipelines to automate build, testing, and release workflows.}
-        \resumeItem{Designed and deployed a responsive landing page for the product to improve user onboarding.}
-      \resumeItemListEnd
-  \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+ \resumeSubheading
+    {Product Engineering Intern}{March 2024 -- Present}
+    {Viskk}{Remote}
+    \resumeItemListStart
+     \resumeItem{Built a WPF-based Windows app to reduce eye strain using the 20-20-20 rule.}
+      \resumeItem{Implemented smart break timers, system tray controls, and idle detection.}
+      \resumeItem{Set up CI/CD pipelines to automate build, testing, and release workflows.}
+      \resumeItem{Designed and deployed a responsive landing page for the product to improve user onboarding.}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
 \resumeSubHeadingListStart
+  
   \resumeProjectHeading
-      {\textbf{QRTick - Python QR Code Generator} $|$ \emph{Python, MongoDB}}{March 2025}
+      {\textbf{QRTick - Ticket Creation script} $|$ \emph{Python, MongoDB}}{March 2025}
       \resumeItemListStart
         \resumeItem{Developed a Python application to generate QR codes from user registration data.}
         \resumeItem{Implemented local storage of QR images and metadata management using MongoDB.}
@@ -128,13 +133,14 @@
       \resumeItemListEnd
 \resumeSubHeadingListEnd
 
+
+
 %-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \textbf{Languages:} JavaScript, Python \\
         \textbf{Frameworks:} Node.js, Express.js, WPF \\
-        \textbf{APIs:} Google Sheets API, Google Translate API, Nodemailer \\
         \textbf{Tools/Platforms:} Git, GitHub, MongoDB, Postman \\
         \textbf{CI/CD:} GitHub Actions
         
