Update project descriptions in resume to reflect recent work and technologies used

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+
 % This is a LaTeX template for a resume. It is designed to be simple and easy to Customize.
 %-------------------------
 % Resume in Latex
@@ -116,13 +117,14 @@ Hi! I'm Ramit Taparia — an aspiring backend developer with a strong foundation
 %-----------PROJECTS-----------
 \section{Projects}
 \resumeSubHeadingListStart
-  
+
   \resumeProjectHeading
-      {\textbf{QRTick - Ticket Creation script} $|$ \emph{Python, MongoDB}}{March 2025}
+      {\textbf{Short-Url} $|$ \emph{Node.js, Express.js, MongoDB, JWT}}{May 2025}
       \resumeItemListStart
-        \resumeItem{Developed a Python application to generate QR codes from user registration data.}
-        \resumeItem{Implemented local storage of QR images and metadata management using MongoDB.}
-        \resumeItem{Designed a modular codebase with separate utilities for database initialization and QR generation.}
+        \resumeItem{Developed a secure URL shortening service using Node.js, Express.js, and MongoDB.}
+        \resumeItem{Implemented JWT-based authentication to protect API endpoints.}
+        \resumeItem{Designed modular architecture with clear separation of concerns for routing, models, and controllers.}
+        \resumeItem{Deployed the project on GitHub: \href{https://github.com/foundRamit/Short-Url}{Short-Url}.}
       \resumeItemListEnd
   \resumeProjectHeading
       {\textbf{Fintech Club - Arcade Platform} $|$ \emph{Node.js, Express.js, MongoDB}}{Feb 2025}
@@ -131,9 +133,16 @@ Hi! I'm Ramit Taparia — an aspiring backend developer with a strong foundation
         \resumeItem{Implemented user authentication, payment handling, and bulk email services for streamlined registration.}
         \resumeItem{Collaborated with a cross-functional team to ensure scalable and maintainable code architecture.}
       \resumeItemListEnd
+  \resumeProjectHeading
+      {\textbf{QRTick - Ticket Creation script} $|$ \emph{Python, MongoDB}}{March 2025}
+      \resumeItemListStart
+        \resumeItem{Developed a Python application to generate QR codes from user registration data.}
+        \resumeItem{Implemented local storage of QR images and metadata management using MongoDB.}
+        \resumeItem{Designed a modular codebase with separate utilities for database initialization and QR generation.}
+      \resumeItemListEnd
+
+
 \resumeSubHeadingListEnd
-
-
 
 %-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
